--- a/static/bg_anim.css
+++ b/static/bg_anim.css
@@ -1,7 +1,9 @@
 #gridwormCanvas{
     background-color: black;
-    position: absolute;
+    position: fixed;
     z-index: -1;
+    left: 0px;
+    top: 0px;
     margin: 0px;
     padding: 0px;
 }
