--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,7 @@ body{
     width:  100%;
     height: 100%;
     margin: 0;
+    text-align: center ;
 }
 
 .topnav {
@@ -63,7 +64,15 @@ a {
     text-decoration: None;
 }
 
-.project .description{
+.project .card-description{
     margin-left: 1%;
 }
 
+.description{
+    --side-margin: 20%;
+    margin-top: 5%;
+    margin-left:  var(--side-margin);
+    margin-right: var(--side-margin) ; 
+    font-size: 2em;
+    color: var(--text);
+}
